# WeatherAppRustCLI

./: Cargo.toml  README.md
.devcontainer/: Dockerfile
weather_app/: Cargo.toml
weather_app/src/: main.rs
